# glfw-imgui-template

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
